test/Fail/Sections-14.agda
∙_ : Set₁ → Set₁
∙ X = X

Foo : Set
Foo = ∙ Set
