test/Fail/Sections-14.err
Sections-14.agda:5.7-12: error: [UnequalTypes]
The types
  Set₁
and
  Set
are not equal
when checking that the expression ∙ Set has type Set
